Remove WEBSOCKET Communication type and populate regardless whether provided. Change ServiveLoader lookup not to filter by commnucation type. Centralise ServiceLoader lookup that checks for ambigious results into ServiveLoaderUtil. Not marshal unmatched values stored on ConfigItem subclasses.